# QuantOdyssey

./: .dockerignore  .env.example  .env.vps.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  README.md  SOUL.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
app/: __init__.py
caddy/: auth.caddy.example
configs/: freqtrade_config.json  freqtrade_futures_config.json
docs/: agent_eval_suite.md  ai_native_interaction.md  api_spec.md  architecture.md  backtest_cost_policy.md  cloud_development.md  dashboard_assistant.md  data_roadmap.md  development_status.md  evaluation_profiles.md  execution_integration.md  harness_researcher.md  lean_strategy_catalog.md  mvp_roadmap.md  mvp_tasks.md  n8n_workflow.md  private_mining_machine.md  product_vision.md  prompt_contracts.md  quant_research_skills.md  research_harness.md  research_os.md  research_pipeline.md  research_scratchpad.md  resource_cost_and_free_tier_policy.md  search_budget_policy.md  supervisor_workflow.md  thesis_inbox_and_public_library.md  workflow.md  worldquant_style_factor_catalog.md
public/: index.html
scripts/: audit_free_data_sources.py  backfill_binance_agg_trades_archive.py  backfill_orderflow_for_failed_breakout_events.py  backup_vps_data.sh  bootstrap_vps.sh  build_funding_crowding_signal.py  check_backtest_environment.py  check_environment.py  check_orderflow_health.py  check_system_health.py  continuous_orderflow_collector.py  dashboard_streamlit.py  deploy_vps.sh  download_binance_agg_trades.py  download_binance_open_interest.py  download_freqtrade_data.py  run_harness_tasks.py  (+25 more)
(+186 files in other folders)
