[project]
name = "quant-odyssey"
version = "0.1.0"
description = "Multi-agent quantitative research and strategy discovery platform."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7,<3",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pandas>=2.0,<4",
    "pyarrow>=7.0",
    "pytest>=8.0,<9",
    "streamlit>=1.32,<2",
]
dashboard = [
    "streamlit>=1.32,<2",
]
orchestration = [
    "prefect>=2.19,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["configs*", "docs*", "freqtrade_user_data*", "scripts*", "tests*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
